derive/test/compile_fail/newtype_index.stderr
error: unsupported attribute `index` on newtype field
 --> compile_fail/newtype_index.rs:4:27
  |
4 | pub struct Newtype(#[sval(index = 1)] i32);
  |                           ^^^^^
